tests/cases/parser/patterns/incomplere_exclusive_range_pat.stderr
error: expected an arrow `=>` 
 --> $DIR/incomplere_exclusive_range_pat.hash:5:10
4 |       match k {
5 |           1..< => {};
  |            ^ 
6 |       }
